fix(sidenav): make backdrop invisible when sidenav is locked-open

--- a/src/components/sidenav/_sidenav.scss
+++ b/src/components/sidenav/_sidenav.scss
@@ -35,7 +35,7 @@ md-sidenav {
 
   @extend .md-sidenav-left;
 }
-.md-sidenav-backdrop.locked-open {
+.md-sidenav-backdrop.md-locked-open {
   display: none;
 }
 
